# slr_assessor

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  setup.sh  test_installation.py
docs/: README.md  SPECIFICATION.md  backup_feature.md  cost_tracking.md  installation.md  qa-protocol.md  testing.md  usage.md
examples/: human_evaluation_sample.csv  sample_human_evaluations.csv  sample_papers.csv
slr_assessor/: __init__.py  cli.py  main.py  models.py
slr_assessor/core/: __init__.py  comparator.py  evaluator.py
slr_assessor/llm/: prompt.py  prompt_manager.py  providers.py
slr_assessor/llm/prompts/: __init__.py  v1_0_default.py  v1_1_enhanced.py  v1_2_enhanced_questions.py  v2_0_experimental.py
slr_assessor/utils/: backup.py  cost_calculator.py  io.py  usage_tracker.py
tests/: __init__.py  conftest.py  test_backup.py  test_cli.py  test_comparator.py  test_cost_calculator.py  test_evaluator.py  test_io.py  test_models.py  test_prompt.py  test_prompt_manager.py  test_providers.py  test_usage_tracker.py
