[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slr-assessor"
version = "2.0.0"
description = "A CLI tool for standardizing and accelerating paper screening in Systematic Literature Reviews using LLMs"
authors = [
    {name = "SLR Assessor Team"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "openai>=1.92.2",
    "google-genai>=0.3.0",
    "anthropic>=0.55.0",
    "pandas>=2.3.0",
    "tiktoken>=0.7.0",
    "scikit-learn>=1.6.1",
]

[project.scripts]
slr-assessor = "slr_assessor.main:app"

[project.urls]
Homepage = "https://github.com/example/slr-assessor"
Repository = "https://github.com/example/slr-assessor.git"
Issues = "https://github.com/example/slr-assessor/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["slr_assessor"]

[tool.ruff]
# Set the maximum line length to 88 (Black's default)
line-length = 88
target-version = "py39"

# Enable specific rule sets
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Ignore specific rules
lint.ignore = [
    "E501",  # Line too long (handled by formatter)
]

# Exclude patterns
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# Format configuration
[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use 4 spaces for indentation
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect line endings
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
]
